--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-	background-color: aliceblue;
+	background-color: #ffffff;
 }
 .backDropModal {
 	background-color: #000000c1;
@@ -11,8 +11,64 @@ body {
 
 .modal {
 	width: clamp(50%, 700px, 90%);
-	height: min(50%, 350px);
 	align-items: center;
+}
+
+.project-img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	object-position: center top;
+}
+
+.project-container {
+	height: 500px;
+	width: 100%;
+}
+
+.cross-hatch {
+	background-image: url("../public/images/crosshatch.png");
+	background-size: 30px;
+}
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+	background-color: transparent;
+	perspective: 10000px;
+	height: 100%; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 1s;
+	transform-style: preserve-3d;
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	-webkit-backface-visibility: hidden; /* Safari */
+	backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+	color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+	transform: rotateY(180deg) scaleX(-1);
+}
+
+.flip-card-demo {
+	min-width: 150px
 }
 
 @keyframes color-rotate {
@@ -42,7 +98,7 @@ body {
 
 @media screen and (prefers-color-scheme: dark) {
 	.wavy-upright {
-		background-image: url("../public/layered-waves-haikei.svg");
+		background-image: url("../public/layered-waves-haikei (1).svg");
 		background-size: cover;
 		width: 100%;
 		min-height: 220px;
@@ -61,39 +117,31 @@ body {
 	animation-direction: alternate;
 }
 
-@media screen and (prefers-color-scheme: light) {
-	::-webkit-scrollbar {
-		width: 0.5em;
-	}
-	::-webkit-scrollbar-track {
-		background-color: #ec72006b;
-	}
-	::-webkit-scrollbar-thumb {
-		background-color: #ffa50b;
-		border-radius: 5px;
-	}
-
-	.card-list::-webkit-scrollbar {
-		width: 0px;
-		height: 0px;
-	}
+::-webkit-scrollbar {
+	width: 0.5em;
 }
-@media screen and (prefers-color-scheme: dark) {
-	::-webkit-scrollbar {
-		width: 0.5em;
-	}
-	::-webkit-scrollbar-track {
-		background-color: #273444;
-	}
-	::-webkit-scrollbar-thumb {
-		background-color: #ffa50b;
-		border-radius: 5px;
-	}
+::-webkit-scrollbar-track {
+	background-color: #ec72006b;
+}
+::-webkit-scrollbar-thumb {
+	background-color: #ec72009a;
+	border-radius: 5px;
+}
 
-	.card-list::-webkit-scrollbar {
-		width: 0px;
-		height: 0px;
-	}
+.card-list::-webkit-scrollbar {
+	width: 0px;
+	height: 0px;
+}
+
+gradient-text {
+	background: -webkit-linear-gradient(right, #ffa50b, #f0c91d);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.card-picture {
+	object-fit: cover;
+	width: 100%;
 }
 
 .headshot {
@@ -114,7 +162,7 @@ body {
 .card-trick {
 	width: 300px;
 	min-width: 300px;
-	box-shadow: -1rem 0 2rem rgba(29, 13, 1, 0.623);
+	box-shadow: -1rem 0 2rem rgba(0, 0, 0, 0.295);
 }
 
 .card-trick:hover ~ .card-trick {
@@ -123,4 +171,32 @@ body {
 
 .card-trick:not(:first-child) {
 	margin-left: -130px;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+	::-webkit-scrollbar {
+		width: 0.5em;
+	}
+	::-webkit-scrollbar-track {
+		background-color: #2b313b;
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #ffa50b;
+		border-radius: 5px;
+	}
+
+	.card-list::-webkit-scrollbar {
+		width: 0px;
+		height: 0px;
+	}
+	.gradient-text {
+		background: -webkit-linear-gradient(right, #ffa50b, #ff49db);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+	.card-trick {
+		width: 300px;
+		min-width: 300px;
+		box-shadow: -1rem 0 2rem rgba(0, 0, 0, 0.658);
+	}
 }
