everything is broken

--- a/src/components/project container/projectscontainer.css
+++ b/src/components/project container/projectscontainer.css
@@ -1,13 +1,13 @@
 .rotate {
-	animation: banner-rotate 10s alternate infinite;
+	animation: banner-rotate 15s infinite;
 }
 
 @keyframes banner-rotate {
 	0% {
-		transform: translateX(0%);
+		transform: translateX(5%);
 	}
 	100% {
-		transform: translateX(-10%);
+		transform: translateX(-50%);
 	}
 }
 
